--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,10 @@
         "activityBar.background": "#336dff",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#00ff3d",
+        "activityBarBadge.background": "#00ffff",
         "activityBarBadge.foreground": "#15202b",
         "sash.hoverBorder": "#33ffff",
-        "statusBar.background": "#37ff00",
+        "statusBar.background": "#0091ff",
         "statusBar.foreground": "#e7e7e7",
         "statusBarItem.hoverBackground": "#33cfff",
         "statusBarItem.remoteBackground": "#2200ff",
