--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seeds/seed.js"
+    "seed": "node seeds/seed.js",
+    "devStart": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
+    "peer": "^0.6.1",
     "sequelize": "^6.21.3",
     "socket.io": "^4.5.1"
   }
