session details set on account creation

--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -1,4 +1,4 @@
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-SESSION_SECRET=
+DB_NAME= 'ex_db'
+DB_USER= 'root'
+DB_PASSWORD= 'password'
+SESSION_SECRET= 'secret'
